--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/tq-jappy/legacy-frontend/issues"
   },
-  "homepage": "https://github.com/tq-jappy/legacy-frontend#readme"
+  "homepage": "https://github.com/tq-jappy/legacy-frontend#readme",
+  "dependencies": {
+    "jest": "24.9.0",
+    "jest-puppeteer": "4.3.0",
+    "puppeteer": "1.19.0"
+  }
 }
