--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest spec/e2e.spec.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/tq-jappy/legacy-frontend#readme",
   "dependencies": {
     "jest": "24.9.0",
+    "jest-image-snapshot": "2.11.0",
     "jest-puppeteer": "4.3.0",
     "puppeteer": "1.19.0"
   }
