--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
   },
   "homepage": "https://github.com/tq-jappy/legacy-frontend#readme",
   "dependencies": {
+    "@babel/core": "7.5.5",
+    "@babel/preset-env": "7.5.5",
+    "babel-loader": "8.0.6",
     "jest": "24.9.0",
     "jest-image-snapshot": "2.11.0",
     "jest-puppeteer": "4.3.0",
-    "puppeteer": "1.19.0"
+    "puppeteer": "1.19.0",
+    "webpack": "4.39.3",
+    "webpack-cli": "3.3.7"
   }
 }
