--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jest": "24.9.0",
     "jest-image-snapshot": "2.11.0",
     "jest-puppeteer": "4.3.0",
+    "jquery": "3.4.1",
     "puppeteer": "1.19.0",
     "webpack": "4.39.3",
     "webpack-cli": "3.3.7"
