--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
     "@babel/core": "7.5.5",
     "@babel/preset-env": "7.5.5",
     "babel-loader": "8.0.6",
+    "css-loader": "3.2.0",
     "jest": "24.9.0",
     "jest-image-snapshot": "2.11.0",
     "jest-puppeteer": "4.3.0",
     "jquery": "3.4.1",
     "puppeteer": "1.19.0",
+    "style-loader": "1.0.0",
+    "vue": "2.6.10",
+    "vue-loader": "15.7.1",
+    "vue-template-compiler": "2.6.10",
     "webpack": "4.39.3",
     "webpack-cli": "3.3.7"
   }
